[package]
name = "bootconf"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.27", features = ["hostname", "user", "fs"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
